Containerized and fixed, should be working now

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,7 @@
-SRC_BW_PASSWORD=MASTER_PW
-DST_BW_PASSWORD=MASTER_PW_DEST
-DST_BW_CLIENT_ID=
-DST_BW_CLIENT_SECRET=
-SRC_BW_CLIENT_ID=
-SRC_BW_CLIENT_SECRET=
-SRC_BW_SERVER=vault.bitwarden.com
-DST_BW_SERVER=vault.bitwarden.eu
+BW_PASSWORD= # Master password for the vault
+BW_CLIENT_ID=
+BW_CLIENT_SECRET=
+BW_SERVER=
+BW_FILE_PASSWORD=
+BACKUP_INTERVAL_HOURS=
 NODE_TLS_REJECT_UNAUTHORIZED=0 # Required if using vaultwarden server with self-signed certs
