Add option between raw and bitwarden encryption. Improve README.md and include decryption instructions

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,6 @@ BACKUP_INTERVAL_HOURS=
 NODE_TLS_REJECT_UNAUTHORIZED=0 # Required if using vaultwarden server with self-signed certs
 BACKUP_INTERVAL_HOURS=
 CRON_EXPRESSION= # For example 0 /12 * * * would be for every 12h do a backup
+BACKUP_FOLDER= # default /app/backups
+LOG_FILE= # default /var/log/cron.log
+ENCRYPTION_MODE= # default bitwarden
